--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ node_js:
 
 services:
   - docker
+
+before_install:
+  - docker-compose --version
+  - docker-compose pull
+  - docker-compose up -d
